# StateMachines

./: CMakeLists.txt  README.md  main.cpp
src/: DeterminedFiniteStateMachine.h  FiniteStateMachine.h
tests/: CMakeLists.txt  test_suit1.cpp  test_suit2.cpp  test_suit3.cpp
tests/test_input/DFSM_tests/: test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  test7.txt
tests/test_input/add_tests/: test1.txt  test2.txt  test3.txt
tests/test_input/eps_tests/: test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt
